-
Bug
-
Resolution: Done
-
P4: Low
-
Qt Creator 4.2.0-beta1
-
Qt Creator 4.2.0 beta1 package, qt-creator-opensource-mac-x86_64-4.2.0-beta1_565.dmg, Qt 5.7.0, GCC 4.9 ARMv7
Installed qt-creator-opensource-mac-x86_64-4.2.0-beta1_565.dmg, added SDK, NDK, added Qt version, went to Kits, the auto-detected kit has a red indicator, and when hovering says: "Error: Compiles produce code for different ABIs".
Building and deploying on a Nexus 7 device seems to work properly though.
For Gerrit Dashboard: QTCREATORBUG-17165 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
174755,3 | Android: Add C toolchains | 4.2 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |